--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,11 @@
 			<artifactId>jaxen</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.lowagie</groupId>
+			<artifactId>itext</artifactId>
+			<version>2.1.5</version>
+		</dependency>
 
 	</dependencies>
 	<distributionManagement>
