--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>org.codehaus.cjcook</groupId>
 	<artifactId>pdf-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0</version>
 	<name>pdf-plugin Maven Mojo</name>
 	<url>http://maven.apache.org</url>
 	<build>
