--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.codehaus.cjcook</groupId>
-	<artifactId>pdf-plugin</artifactId>
+	<artifactId>scribd-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
-	<version>1.1-SNAPSHOT</version>
-	<name>pdf-plugin Maven Mojo</name>
+	<version>1.0-SNAPSHOT</version>
+	<name>scribd-plugin Maven Mojo</name>
 	<url>http://maven.apache.org</url>
 	<build>
 		<plugins>
@@ -148,13 +148,13 @@
 		</snapshotRepository>
 		<site>
 			<id>cjcook-releases</id>
-			<url>dav:https://dav.codehaus.org/cjcook/pdf-plugin</url>
+			<url>dav:https://dav.codehaus.org/cjcook/scribd-plugin</url>
 		</site>
 
 	</distributionManagement>
 	<scm>
-		<connection>scm:git:git://github.com/tobrien/pdf-plugin.git</connection>
-		<url>scm:git:git://github.com/tobrien/pdf-plugin.git</url>
-		<developerConnection>scm:git:git://github.com/tobrien/pdf-plugin.git</developerConnection>
+		<connection>scm:git:git://github.com/tobrien/scribd-plugin.git</connection>
+		<url>scm:git:git://github.com/tobrien/scribd-plugin.git</url>
+		<developerConnection>scm:git:git://github.com/tobrien/scribd-plugin.git</developerConnection>
 	</scm>
 </project>
