--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,11 @@
 			<version>2.1.5</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
 	</dependencies>
 	<distributionManagement>
 		<repository>
